--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2,6 +2,10 @@ body {
   font-family: Circe,sans-serif;
   font-weight: 400
 }
+.hero__title {
+  font-family: Circe,sans-serif;
+  font-weight: 800
+}
 @font-face {
   font-family: Circe;
   src: url(../fonts/Circe-Regular.woff2) format("woff2"),url(../fonts/Circe-Regular.woff) format("woff");
@@ -76,7 +80,16 @@ body.lock {
   line-height: 42px
 }
 .btn {
-  display: inline-block;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
   color: #fff;
   background-color: #61cb81;
   font-size: 26px;
@@ -84,7 +97,16 @@ body.lock {
   padding: 20px 40px
 }
 .btn-outline {
-  display: inline-block;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
   color: #61cb81;
   background-color: transparent;
   border: 6px solid #61cb81;
@@ -134,6 +156,54 @@ body.lock {
 .menu__list-link:hover {
   border-bottom: 1px solid #61cb81
 }
+.hero {
+  background: #546f4e url(../images/hero-bg.jpg) center center;
+  background-size: cover
+}
+.hero__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center
+}
+.hero__heading {
+  padding: 320px 0 120px;
+  text-align: center
+}
+.hero__title {
+  font-size: 61px;
+  line-height: 58px;
+  text-align: center;
+  color: #fff;
+  -webkit-filter: drop-shadow(0 8px 16px #152726);
+  filter: drop-shadow(0 8px 16px #152726);
+  margin-bottom: 50px
+}
+.hero__btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  background-color: transparent;
+  border: 6px solid #fff;
+  height: 61px;
+  font-size: 26px;
+  line-height: 30px;
+  padding: 0 40px
+}
 @media (min-width:767px) {
   .menu__list {
     display: -webkit-box;
@@ -141,12 +211,25 @@ body.lock {
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center;
-    padding-right: 20px
+    align-items: center
+  }
+  .menu__list-item:last-child {
+    margin-right: 0
   }
   .menu__list-item {
-    margin-right: 85px;
+    margin-right: 40px;
     padding: 10px 0
+  }
+}
+@media (min-width:1200px) {
+  .menu__list {
+    padding-right: 20px
+  }
+  .menu__list-item:last-child {
+    margin-right: 85px
+  }
+  .menu__list-item {
+    margin-right: 85px
   }
 }
 @media (max-width:767px) {
@@ -234,7 +317,11 @@ body.lock {
     left: 0;
     top: 0;
     background: #191d21;
+    opacity: 0;
     z-index: 2
+  }
+  .menu__body.active::before {
+    opacity: 1
   }
   .menu__list-item:last-child {
     margin-bottom: 0
