--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -103,17 +103,25 @@
                 left: 0;
                 top: 0;
                 background:#191d21;
+                opacity: 0;
                 z-index: 2;
             }
         }
         &.active{
             top: 0;
+            &::before{
+                @media (max-width: 767px) {
+                    opacity: 1;
+                }
+            }
         }
     }
     &__list {
         @media (min-width: 767px) {
             display: flex;
             align-items: center;
+        }
+        @media (min-width: 1200px) {
             padding-right: 20px;
         }
         &-item {
@@ -121,13 +129,22 @@
                 @media (max-width: 767px) {
                     margin-bottom: 0;
                 }
+                @media (min-width: 767px) {
+                    margin-right: 0px;
+                }
+                @media (min-width: 1200px) {
+                    margin-right: 85px;
+                }
             }
             @media (min-width: 767px) {
-                margin-right: 85px;
+                margin-right: 40px;
                 padding: 10px 0;
             }
             @media (max-width: 767px) {
                 margin-bottom: 30px;
+            }
+            @media (min-width: 1200px) {
+                margin-right: 85px;
             }
         }
         &-link {
