--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,3 +2,39 @@
 @import "fonts";
 @import "global";
 @import "header";
+
+.hero {
+    background: #546f4e url("../images/hero-bg.jpg") center center;
+    background-size: cover;
+    &__inner{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    &__heading {
+        padding: 320px 0 120px;
+        text-align: center;
+    }
+    &__title {
+        @extend %сirce-extrabold;
+        font-size: 61px;
+        line-height: 58px;
+        text-align: center;
+        color: #fff;
+        filter: drop-shadow(0px 8px 16px #152726);
+        margin-bottom: 50px;
+    }
+    &__btn {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: #fff;
+        background-color: transparent;
+        border: 6px solid #fff;
+        height: 61px;
+        font-size: 26px;
+        line-height: 30px;
+        padding: 0 40px;
+    }
+}
