--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,7 +6,7 @@
 .hero {
     background: #546f4e url("../images/hero-bg.jpg") center center;
     background-size: cover;
-    &__inner{
+    &__inner {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -14,15 +14,32 @@
     &__heading {
         padding: 320px 0 120px;
         text-align: center;
+        @media (max-width: 1000px) {
+            padding: 240px 0 80px;
+        }
+        @media (max-width: 767px) {
+            padding: 160px 0 60px;
+        }
     }
     &__title {
         @extend %сirce-extrabold;
         font-size: 61px;
-        line-height: 58px;
+        line-height: 58 / 61 * 100%;
         text-align: center;
         color: #fff;
         filter: drop-shadow(0px 8px 16px #152726);
         margin-bottom: 50px;
+        padding: 0 20px;
+        @media (max-width: 1200px) {
+            font-size: 50px;
+        }
+        @media (max-width: 1000px) {
+            font-size: 35px;
+        }
+        @media (max-width: 767px) {
+            font-size: 30px;
+            padding: 0 15px;
+        }
     }
     &__btn {
         display: inline-flex;
@@ -34,7 +51,133 @@
         border: 6px solid #fff;
         height: 61px;
         font-size: 26px;
-        line-height: 30px;
+        line-height: 30 / 26 * 100%;
         padding: 0 40px;
+        @media (max-width: 1200px) {
+            font-size: 20px;
+            padding: 0 35px;
+        }
+        @media (max-width: 1000px) {
+            font-size: 15px;
+            border: 4px solid #fff;
+            height: 50px;
+        }
+        @media (max-width: 767px) {
+            height: 45px;
+        }
+    }
+}
+
+.about {
+    padding: 95px 0 105px;
+    @media (max-width: 1122px) {
+        padding: 80px 0;
+    }
+    @media (max-width: 767px) {
+        padding: 60px 0;
+    }
+    @media (max-width: 767px) {
+        padding: 40px 0;
+    }
+    &__description {
+        max-width: 960px;
+        text-align: center;
+        margin: 0 auto 80px;
+        padding: 0 15px;
+        @media (max-width: 1122px) {
+            margin: 0 auto 60px;
+        }
+        @media (max-width: 767px) {
+            margin: 0 auto 50px;
+        }
+        @media (max-width: 320px) {
+            margin: 0 auto 40px;
+        }
+    }
+    &__title {
+        text-align: center;
+        margin-bottom: 42px;
+        @media (max-width: 767px) {
+            margin-bottom: 30px;
+        }
+    }
+    &__text {
+        @extend %myriadpro-regular;
+        span {
+            font-family: Arial, Helvetica, sans-serif;
+            font-style: italic;
+        }
+    }
+    &__link {
+        color: #61cb81;
+        border-bottom: 1px solid #61cb81;
+    }
+    &__stats {
+        background-color: #dde7e1;
+        @media (max-width: 1122px) {
+            background-color: transparent;
+        }
+        &-inner {
+            display: flex;
+            justify-content: center;
+            @media (max-width: 1122px) {
+                flex-wrap: wrap;
+            }
+        }
+    }
+    &__item{
+        color: #5b675e;
+        background-color: #dde7e1;
+        text-align: center;
+        padding: 50px 37px;
+        min-width: 241px;
+        border-right: 1px solid #fff;
+        @media (max-width: 1450px) {
+            padding: 45px 30px;
+            min-width: 200px;
+        }
+        @media (max-width: 1350px) {
+            padding: 30px 25px;
+        }
+        @media (max-width: 1250px) {
+            min-width: 180px;
+        }
+        @media (max-width: 1122px) {
+            border: none;
+            margin-bottom: 10px;
+            margin-right: 10px;
+            width: 180px;
+        }
+        @media (max-width: 767px) {
+            margin: 8px;
+        }
+        @media (max-width: 400px) {
+            margin: 0 0 8px 0;
+            width: 100%;
+            padding: 25px 20px;
+        }
+        &:last-child{
+            border-right: none;
+        }
+        &-num{
+            @extend %сirce-extrabold;
+            font-size: 114px;
+            line-height: 100px;
+            margin: 0;
+            @media (max-width: 1450px) {
+                font-size: 100px;
+            }
+            @media (max-width: 1350px) {
+                font-size: 80px;
+                line-height: 86px;
+            }
+            @media (max-width: 767px) {
+                font-size: 60px;
+                line-height: 70px;
+            }
+        }
+        &-text{
+            margin: 0;
+        }
     }
 }
