--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -71,10 +71,17 @@ body.lock {
         bottom: 0;
         left: 50%;
         transform: translateX(-50%);
+        @media (max-width: 320px) {
+            width: 100px;
+        }
     }
     @media (max-width: 767px) {
         font-size: 25px;
         padding-bottom: 25px;
+    }
+    @media (max-width: 320px) {
+        font-size: 20px;
+        padding-bottom: 20px;
     }
 }
 
