--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -199,37 +199,40 @@
 }
 
 .services {
+    padding-bottom: 54px;
+    text-align: center;
     &__description {
         margin-bottom: 52px;
+    }
+    &__cards{
+        margin-bottom: 75px;
     }
 }
 
 .cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     &__card {
         flex-grow: 1;
-        flex-shrink: 1;
-        &-inner {
-            position: relative;
-            transition: all 0.3s;
-            width: 604px;
-            height: 514px;
-            &:hover .cards__hover{
-                opacity: 1;
-                transition: all .3s;
-            }
-        }
     }
     &__img {
-        
+        position: relative;
+        img {
+            display: block;
+            width: 100%;
+            height: 600px;
+        }
+        &:hover .cards__hover{
+            bottom: 0;
+            height: 100%;
+        }
     }
     &__title {
         color: #fff;
         font-size: 51px;
         line-height: 38 / 51 * 100%;
         @extend %сirce-extrabold;
+        text-align: left;
         position: absolute;
         top: 91px;
         left: 81px;
@@ -238,18 +241,21 @@
     }
     &__hover {
         width: 100%;
-        height: 100%;
+        height: 0;
         background-color: rgba(#87e7a5, 0.7);
+        overflow: hidden;
         position: absolute;
-        top: 0;
+        bottom: 100%;
         left: 0;
+        right: 0;
         z-index: 4;
-        opacity: 0;
+        transition: .4s ease;
         &-text {
             color: #fff;
             font-size: 14px;
             line-height: 25px;
             @extend %myriadpro-regular;
+            text-align: left;
             position: absolute;
             top: 225px;
             left: 79px;
