--- a/app/css/style.css
+++ b/app/css/style.css
@@ -9,7 +9,9 @@ body {
   font-weight: 800
 }
 .cards__hover-text,
-.description__text {
+.description__text,
+.reviews__box-text,
+.reviews__quote {
   font-family: 'Myriad Pro',sans-serif;
   font-weight: 400
 }
@@ -1019,6 +1021,97 @@ body.lock {
 .our-elephants__text {
   margin-bottom: 43px
 }
+.reviews {
+  padding: 85px 0 96px;
+  background-color: #dde7e1
+}
+.reviews__title {
+  margin-bottom: 80px;
+  text-align: center
+}
+.reviews__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 140px
+}
+.reviews__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-right: 25px
+}
+.reviews__box:last-child {
+  margin-right: 0
+}
+.reviews__box-img {
+  height: 100px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100px;
+  flex: 0 0 100px;
+  border-radius: 50%;
+  margin-right: 20px;
+  overflow: hidden
+}
+.reviews__box-text {
+  padding-top: 10px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 235px;
+  flex: 0 0 235px;
+  font-size: 14px
+}
+.reviews__box-author {
+  display: block;
+  font-size: 19px;
+  line-height: 121.05263%;
+  margin-bottom: 19px
+}
+.reviews__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center
+}
+.reviews__quote {
+  margin: 0 40px;
+  max-width: 500px;
+  font-size: 20px;
+  line-height: 135%;
+  padding: 0 60px 38px 71px;
+  position: relative
+}
+.reviews__quote-author {
+  font-family: Arial,Helvetica,sans-serif;
+  font-style: italic;
+  font-size: 16px;
+  position: absolute;
+  bottom: 0;
+  right: 0
+}
+.reviews__quote::before {
+  content: "";
+  position: absolute;
+  background-image: url(../images/icons/arrow-left.png);
+  width: 48px;
+  height: 50px;
+  left: 0;
+  bottom: 18px
+}
+.reviews__quote::after {
+  content: "";
+  position: absolute;
+  background-image: url(../images/icons/arrow-right.png);
+  width: 48px;
+  height: 50px;
+  right: 0;
+  top: -2px
+}
 @media (min-width:767px) {
   .header__logo {
     padding-top: 5px
@@ -1080,6 +1173,31 @@ body.lock {
   .our-elephants__info {
     padding: 47px 42px;
     max-width: 488px
+  }
+  .reviews__box {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center
+  }
+  .reviews__box-img {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center
+  }
+  .reviews__box-text {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100px;
+    flex: 0 0 100px
+  }
+  .reviews__box-author {
+    text-align: center
   }
 }
 @media (max-width:1200px) {
@@ -1151,6 +1269,9 @@ body.lock {
     border: 4px solid #fff;
     height: 50px
   }
+  .reviews__quote {
+    margin: 0 25px
+  }
 }
 @media (max-width:940px) {
   .our-elephants__item {
@@ -1164,6 +1285,36 @@ body.lock {
   }
   .our-elephants__text {
     margin-bottom: 20px
+  }
+  .reviews {
+    padding: 55px 0 66px
+  }
+  .reviews__title {
+    margin-bottom: 65px
+  }
+  .reviews__top {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 60px
+  }
+  .reviews__box {
+    margin-right: 0;
+    margin-bottom: 30px
+  }
+  .reviews__box-text {
+    text-align: center;
+    max-width: 350px
+  }
+  .reviews__bottom {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap
+  }
+  .reviews__quote:last-child {
+    margin-bottom: 0
+  }
+  .reviews__quote {
+    margin: 0 0 50px;
+    max-width: 512px
   }
 }
 @media (max-width:767px) {
@@ -1350,6 +1501,21 @@ body.lock {
     min-width: -moz-fit-content;
     min-width: fit-content
   }
+  .reviews__quote::before {
+    display: none
+  }
+  .reviews__quote::after {
+    display: none
+  }
+}
+@media (max-width:426px) {
+  .reviews__box:last-child {
+    margin-bottom: 0
+  }
+  .reviews__quote {
+    padding: 0 30px 38px 30px;
+    margin: 0 0 35px
+  }
 }
 @media (max-width:400px) {
   .about__item {
@@ -1378,5 +1544,14 @@ body.lock {
   }
   .our-elephants__info {
     padding: 18px
+  }
+  .reviews {
+    padding: 44px 0 46px
+  }
+  .reviews__title {
+    margin-bottom: 45px
+  }
+  .reviews__top {
+    margin-bottom: 45px
   }
 }
