--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -205,7 +205,7 @@
     &__description {
         margin-bottom: 52px;
     }
-    &__cards{
+    &__cards {
         margin-bottom: 75px;
     }
 }
@@ -223,7 +223,7 @@
             width: 100%;
             height: 600px;
         }
-        &:hover .cards__hover{
+        &:hover .cards__hover {
             bottom: 0;
             height: 100%;
         }
@@ -250,7 +250,7 @@
         left: 0;
         right: 0;
         z-index: 4;
-        transition: .4s ease;
+        transition: 0.4s ease;
         &-text {
             color: #fff;
             font-size: 14px;
@@ -265,13 +265,13 @@
     }
 }
 
-.our-elephants{
+.our-elephants {
     padding: 54px 0 74px;
     text-align: center;
     @media (max-width: 767px) {
         padding: 34px 0 44px;
     }
-    &__title{
+    &__title {
         text-align: center;
         margin-bottom: 76px;
         @media (max-width: 1200px) {
@@ -287,7 +287,7 @@
             margin-bottom: 25px;
         }
     }
-    &__item{
+    &__item {
         position: relative;
         margin-bottom: 200px;
         @media (max-width: 940px) {
@@ -313,7 +313,7 @@
             }
         }
     }
-    &__info{
+    &__info {
         position: absolute;
         max-width: 588px;
         background-color: #fff;
@@ -322,7 +322,7 @@
         padding: 67px 62px;
         bottom: -118px;
         left: 50%;
-        box-shadow: (0px 37px 25.5px rgba(119,119,99,0.21));
+        box-shadow: (0px 37px 25.5px rgba(119, 119, 99, 0.21));
         @media (max-width: 1250px) {
             padding: 47px 42px;
             max-width: 488px;
@@ -342,7 +342,7 @@
             bottom: 0;
             right: 0;
             min-width: 288px;
-            box-shadow: (8px 9px 8px rgba(119,119,99,0.21));
+            box-shadow: (8px 9px 8px rgba(119, 119, 99, 0.21));
             padding: 27px 22px;
         }
         @media (max-width: 576px) {
@@ -352,10 +352,159 @@
             padding: 18px;
         }
     }
-    &__text{
+    &__text {
         margin-bottom: 43px;
         @media (max-width: 940px) {
             margin-bottom: 20px;
+        }
+    }
+}
+
+.reviews {
+    padding: 85px 0 96px;
+    background-color: #dde7e1;
+    @media (max-width: 940px) {
+        padding: 55px 0 66px;
+    }
+    @media (max-width: 320px) {
+        padding: 44px 0 46px;
+    }
+    &__title {
+        margin-bottom: 80px;
+        text-align: center;
+        @media (max-width: 940px) {
+            margin-bottom: 65px;
+        }
+        @media (max-width: 320px) {
+            margin-bottom: 45px;
+        }
+    }
+    &__top {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 140px;
+        @media (max-width: 940px) {
+            flex-wrap: wrap;
+            margin-bottom: 60px;
+        }
+        @media (max-width: 320px) {
+            margin-bottom: 45px;
+        }
+    }
+    &__box {
+        display: flex;
+        width: 100%;
+        margin-right: 25px;
+        &:last-child {
+            margin-right: 0;
+            @media (max-width: 426px) {
+                margin-bottom: 0;
+            }
+        }
+        @media (max-width: 1250px) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        @media (max-width: 940px) {
+            margin-right: 0;
+            margin-bottom: 30px;
+        }
+        &-img {
+            height: 100px;
+            flex: 0 0 100px;
+            border-radius: 50%;
+            margin-right: 20px;
+            overflow: hidden;
+            @media (max-width: 1250px) {
+                align-self: center;
+            }
+        }
+        &-text {
+            padding-top: 10px;
+            flex: 0 0 235px;
+            @extend %myriadpro-regular;
+            font-size: 14px;
+            @media (max-width: 1250px) {
+                flex: 0 0 100px;
+            }
+            @media (max-width: 940px) {
+                text-align: center;
+                max-width: 350px;
+            }
+        }
+        &-author {
+            display: block;
+            font-size: 19px;
+            line-height: 23 / 19 * 100%;
+            margin-bottom: 19px;
+            @media (max-width: 1250px) {
+                text-align: center;
+            }
+        }
+    }
+    &__bottom {
+        display: flex;
+        justify-content: center;
+        @media (max-width: 940px) {
+            flex-wrap: wrap;
+        }
+    }
+    &__quote {
+        margin: 0 40px;
+        max-width: 500px;
+        font-size: 20px;
+        line-height: 27 / 20 * 100%;
+        @extend %myriadpro-regular;
+        padding: 0 60px 38px 71px;
+        position: relative;
+        &:last-child{
+            @media (max-width: 940px) {
+                margin-bottom: 0;
+            }
+        }
+        @media (max-width: 1000px) {
+            margin: 0 25px;
+        }
+        @media (max-width: 940px) {
+            margin: 0 0 50px;
+            max-width: 512px;
+        }
+        @media (max-width: 426px) {
+            padding: 0 30px 38px 30px;
+            margin: 0 0 35px;
+        }
+        &-author {
+            font-family: Arial, Helvetica, sans-serif;
+            font-style: italic;
+            font-size: 16px;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+        }
+        &::before {
+            content: "";
+            position: absolute;
+            background-image: url("../images/icons/arrow-left.png");
+            width: 48px;
+            height: 50px;
+            left: 0;
+            bottom: 18px;
+            @media (max-width: 576px) {
+                display: none;
+            }
+        }
+        &::after {
+            content: "";
+            position: absolute;
+            background-image: url("../images/icons/arrow-right.png");
+            width: 48px;
+            height: 50px;
+            right: 0;
+            top: -2px;
+            @media (max-width: 576px) {
+                display: none;
+            }
         }
     }
 }
