--- a/app/css/style.css
+++ b/app/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 .cards__hover-text,
 .description__text,
+.member__descr,
 .reviews__box-text,
 .reviews__quote {
   font-family: 'Myriad Pro',sans-serif;
@@ -1112,6 +1113,94 @@ body.lock {
   right: 0;
   top: -2px
 }
+.team {
+  padding: 100px 0 50px
+}
+.team__description {
+  margin-bottom: 60px
+}
+.team__members {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between
+}
+.member__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column
+}
+.member__img {
+  position: relative;
+  margin-bottom: 45px
+}
+.member__img img {
+  display: block;
+  width: 100%;
+  height: auto
+}
+.member__img:hover .member__hover {
+  opacity: 1
+}
+.member__hover {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(135,231,165,.7);
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 4;
+  -webkit-transform: translate(-15px,-15px);
+  -ms-transform: translate(-15px,-15px);
+  transform: translate(-15px,-15px);
+  -webkit-transition: .4s ease;
+  -o-transition: .4s ease;
+  transition: .4s ease;
+  opacity: 0
+}
+.member__hover-social {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%)
+}
+.member__info {
+  text-align: center
+}
+.member__name {
+  font-size: 26px;
+  line-height: 146.15385%
+}
+.member__descr {
+  font-size: 16px;
+  line-height: 143.75%;
+  color: #000
+}
+.social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex
+}
+.social-list__item {
+  margin-right: 5px
+}
+.social-list__item:last-child {
+  margin-right: 0
+}
+.social-list__link img {
+  width: 46px;
+  height: 46px
+}
 @media (min-width:767px) {
   .header__logo {
     padding-top: 5px
@@ -1219,6 +1308,14 @@ body.lock {
   .our-elephants__title {
     margin-bottom: 66px
   }
+  .member {
+    max-width: 300px;
+    padding: 10px;
+    margin-bottom: 10px
+  }
+  .member__img {
+    margin-bottom: 30px
+  }
 }
 @media (max-width:1122px) {
   .about {
@@ -1271,6 +1368,13 @@ body.lock {
   }
   .reviews__quote {
     margin: 0 25px
+  }
+  .team__members {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center
   }
 }
 @media (max-width:940px) {
@@ -1488,6 +1592,21 @@ body.lock {
     box-shadow: 8px 9px 8px rgba(119,119,99,.21);
     padding: 27px 22px
   }
+  .team {
+    padding: 80px 0 35px
+  }
+  .team__description {
+    margin-bottom: 45px
+  }
+  .member__img {
+    margin-bottom: 25px
+  }
+  .member__name {
+    font-size: 20px
+  }
+  .member__descr {
+    font-size: 14px
+  }
 }
 @media (max-width:576px) {
   .our-elephants__item img {
@@ -1553,5 +1672,11 @@ body.lock {
   }
   .reviews__top {
     margin-bottom: 45px
+  }
+  .team {
+    padding: 60px 0 35px
+  }
+  .team__description {
+    margin-bottom: 30px
   }
 }
