--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,6 +3,7 @@ body {
   font-weight: 400
 }
 .about__item-num,
+.achievements__text,
 .cards__title,
 .hero__title {
   font-family: Circe,sans-serif;
@@ -1201,6 +1202,62 @@ body.lock {
   width: 46px;
   height: 46px
 }
+.achievements {
+  padding: 50px 0 58px
+}
+.achievements__description {
+  margin-bottom: 65px
+}
+.achievements__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap
+}
+.achievements__card {
+  margin-bottom: 20px
+}
+.achievements__img {
+  position: relative
+}
+.achievements__img img {
+  display: block;
+  width: 100%;
+  height: auto
+}
+.achievements__img:hover .achievements__hover {
+  bottom: 0;
+  height: 100%
+}
+.achievements__hover {
+  width: 100%;
+  height: 0;
+  background-color: rgba(135,231,165,.7);
+  overflow: hidden;
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  z-index: 4;
+  -webkit-transition: .4s ease;
+  -o-transition: .4s ease;
+  transition: .4s ease
+}
+.achievements__text {
+  position: absolute;
+  left: 90px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  color: #fff;
+  font-size: 51px;
+  line-height: 74.5098%
+}
 @media (min-width:767px) {
   .header__logo {
     padding-top: 5px
@@ -1607,6 +1664,31 @@ body.lock {
   .member__descr {
     font-size: 14px
   }
+  .achievements .container-larger {
+    padding: 0 0 0 20px
+  }
+  .achievements__cards {
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    overflow: auto
+  }
+  .achievements__card:last-child {
+    margin-right: 0
+  }
+  .achievements__card {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 90%;
+    flex: 0 0 90%;
+    margin-right: 15px;
+    margin-bottom: 0
+  }
 }
 @media (max-width:576px) {
   .our-elephants__item img {
@@ -1634,6 +1716,19 @@ body.lock {
   .reviews__quote {
     padding: 0 30px 38px 30px;
     margin: 0 0 35px
+  }
+  .achievements {
+    padding: 30px 0 38px
+  }
+  .achievements__description {
+    margin-bottom: 35px
+  }
+  .achievements__text {
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    font-size: 30px
   }
 }
 @media (max-width:400px) {
@@ -1678,5 +1773,8 @@ body.lock {
   }
   .team__description {
     margin-bottom: 30px
+  }
+  .achievements {
+    padding: 15px 0 18px
   }
 }
