--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -458,7 +458,7 @@
         @extend %myriadpro-regular;
         padding: 0 60px 38px 71px;
         position: relative;
-        &:last-child{
+        &:last-child {
             @media (max-width: 940px) {
                 margin-bottom: 0;
             }
@@ -509,7 +509,7 @@
     }
 }
 
-.team{
+.team {
     padding: 100px 0 50px;
     @media (max-width: 767px) {
         padding: 80px 0 35px;
@@ -517,7 +517,7 @@
     @media (max-width: 320px) {
         padding: 60px 0 35px;
     }
-    &__description{
+    &__description {
         margin-bottom: 60px;
         @media (max-width: 767px) {
             margin-bottom: 45px;
@@ -526,46 +526,45 @@
             margin-bottom: 30px;
         }
     }
-    &__members{
+    &__members {
         display: flex;
         justify-content: space-between;
-        @media (max-width:1000px) {
+        @media (max-width: 1000px) {
             flex-wrap: wrap;
             justify-content: center;
         }
     }
 }
 
-.member{
-    @media (max-width:1200px) {
+.member {
+    @media (max-width: 1200px) {
         max-width: 300px;
         padding: 10px;
         margin-bottom: 10px;
     }
-    &__inner{
+    &__inner {
         display: flex;
         flex-direction: column;
-        
     }
-    &__img{
+    &__img {
         position: relative;
         margin-bottom: 45px;
-        @media (max-width:1200px) {
+        @media (max-width: 1200px) {
             margin-bottom: 30px;
         }
         @media (max-width: 767px) {
             margin-bottom: 25px;
         }
-        img{
+        img {
             display: block;
             width: 100%;
             height: auto;
         }
-        &:hover .member__hover{
+        &:hover .member__hover {
             opacity: 1;
         }
     }
-    &__hover{
+    &__hover {
         width: 100%;
         height: 100%;
         background-color: rgba(#87e7a5, 0.7);
@@ -578,24 +577,24 @@
         transform: translate(-15px, -15px);
         transition: 0.4s ease;
         opacity: 0;
-        &-social{
+        &-social {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
     }
-    &__info{
+    &__info {
         text-align: center;
     }
-    &__name{
+    &__name {
         font-size: 26px;
-        line-height: 38 / 26 *100%;
+        line-height: 38 / 26 * 100%;
         @media (max-width: 767px) {
             font-size: 20px;
         }
     }
-    &__descr{
+    &__descr {
         @extend %myriadpro-regular;
         font-size: 16px;
         line-height: 23 / 16 * 100%;
@@ -606,18 +605,102 @@
     }
 }
 
-.social-list{
+.social-list {
     display: flex;
-    &__item{
+    &__item {
         margin-right: 5px;
-        &:last-child{
+        &:last-child {
             margin-right: 0;
         }
     }
-    &__link{
+    &__link {
         img {
             width: 46px;
             height: 46px;
+        }
+    }
+}
+
+.achievements {
+    padding: 50px 0 58px;
+    & .container-larger{
+        @media (max-width: 767px) {
+            padding: 0 0 0 20px;
+        }
+    }
+    @media (max-width: 426px) {
+        padding: 30px 0 38px;
+    }
+    @media (max-width: 320px) {
+        padding: 15px 0 18px;
+    }
+    &__description {
+        margin-bottom: 65px;
+        @media (max-width: 426px) {
+            margin-bottom: 35px;
+        }
+    }
+    &__cards {
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        @media (max-width: 767px) {
+            flex-wrap: nowrap;
+            justify-content: start;
+            flex-direction: row;
+            overflow: auto;
+        }
+    }
+    &__card {
+        margin-bottom: 20px;
+        &:last-child{
+            @media (max-width: 767px) {
+                margin-right: 0;
+            }
+        }
+        @media (max-width: 767px) {
+            flex: 0 0 90%;
+            margin-right: 15px;
+            margin-bottom: 0;
+        }
+    }
+    &__img {
+        position: relative;
+        img {
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+        &:hover .achievements__hover {
+            bottom: 0;
+            height: 100%;
+        }
+    }
+    &__hover {
+        width: 100%;
+        height: 0;
+        background-color: rgba(#87e7a5, 0.7);
+        overflow: hidden;
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        right: 0;
+        z-index: 4;
+        transition: 0.4s ease;
+    }
+    &__text {
+        position: absolute;
+        left: 90px;
+        top: 50%;
+        transform: translateY(-50%);
+        color: #fff;
+        font-size: 51px;
+        line-height: 38 / 51 * 100%;
+        @extend %сirce-extrabold;
+        @media (max-width:426px){
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 30px;
         }
     }
 }
