--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -97,6 +97,11 @@ body.lock {
     font-size: 26px;
     line-height: 30 / 26 * 100%;
     padding: 0 40px;
+    border: none;
+    cursor: pointer;
+    &:hover{
+        background-color: #4eaa6a;
+    }
     @media (max-width: 1200px) {
         font-size: 20px;
         padding: 0 35px;
@@ -123,13 +128,21 @@ body.lock {
     font-size: 26px;
     line-height: 30 / 26 * 100%;
     padding: 0 40px;
+    cursor: pointer;
+    &:hover{
+        color: #4eaa6a;
+        border: 6px solid #4eaa6a;
+        @media (max-width: 1000px) {
+            border: 4px solid #4eaa6a;
+        }
+    }
     @media (max-width: 1200px) {
         font-size: 20px;
         padding: 0 35px;
     }
     @media (max-width: 1000px) {
         font-size: 15px;
-        border: 4px solid #61cb81;
+        border: 4px solid #4eaa6a;
         height: 50px;
     }
     @media (max-width: 767px) {
