--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -623,7 +623,7 @@
 
 .achievements {
     padding: 50px 0 58px;
-    & .container-larger{
+    & .container-larger {
         @media (max-width: 767px) {
             padding: 0 0 0 20px;
         }
@@ -644,7 +644,7 @@
         display: flex;
         justify-content: space-evenly;
         flex-wrap: wrap;
-        @media (max-width:1450px){
+        @media (max-width: 1450px) {
             justify-content: center;
         }
         @media (max-width: 767px) {
@@ -656,12 +656,12 @@
     }
     &__card {
         margin-bottom: 20px;
-        &:last-child{
+        &:last-child {
             @media (max-width: 767px) {
                 margin-right: 0;
             }
         }
-        @media (max-width:1450px){
+        @media (max-width: 1450px) {
             margin: 15px;
         }
         @media (max-width: 767px) {
@@ -705,7 +705,7 @@
         font-size: 51px;
         line-height: 38 / 51 * 100%;
         @extend %сirce-extrabold;
-        @media (max-width:426px){
+        @media (max-width: 426px) {
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 30px;
@@ -713,7 +713,7 @@
     }
 }
 
-.blog{
+.blog {
     padding: 58px 0 100px;
     text-align: center;
     @media (max-width: 767px) {
@@ -722,13 +722,13 @@
     @media (max-width: 320px) {
         padding: 38px 0 50px;
     }
-    &__title{
+    &__title {
         margin-bottom: 70px;
         @media (max-width: 767px) {
             margin-bottom: 40px;
         }
     }
-    &__articles{
+    &__articles {
         display: flex;
         justify-content: space-between;
         margin-bottom: 60px;
@@ -740,7 +740,7 @@
             margin-bottom: 30px;
         }
     }
-    &__article{
+    &__article {
         display: flex;
         flex-direction: column;
         margin: 15px;
@@ -748,12 +748,12 @@
             width: 100%;
             margin: 0 0 20px 0;
         }
-        &:last-child{
+        &:last-child {
             @media (max-width: 767px) {
                 margin: 0;
             }
         }
-        &-img{
+        &-img {
             position: relative;
             img {
                 @media (max-width: 767px) {
@@ -761,7 +761,7 @@
                 }
             }
         }
-        &-date{
+        &-date {
             position: absolute;
             left: 0;
             bottom: 20px;
@@ -771,28 +771,113 @@
             text-align: center;
             justify-content: center;
             align-items: center;
-            background-color: rgba(#61cb81, .8);
+            background-color: rgba(#61cb81, 0.8);
             @extend %сirce-extrabold;
             font-size: 27px;
             color: #fff;
         }
-        &-title{
+        &-title {
             text-align: left;
             max-width: 381px;
             font-size: 22px;
             line-height: 38 / 22 * 100%;
             margin-bottom: 15px;
+            &:hover{
+                color: #62cc82;
+            }
             @media (max-width: 320px) {
                 font-size: 18px;
             }
         }
-        &-descr{
+        &-descr {
             display: block;
             font-size: 16px;
             line-height: 22 / 16 * 100%;
             @extend %myriadpro-regular;
             @media (max-width: 320px) {
                 font-size: 14px;
+            }
+        }
+    }
+}
+
+.contact-us {
+    padding: 84px 0 90px;
+    background-color: #dde7e1;
+    @media (max-width: 767px) {
+        padding: 44px 0 50px;
+    }
+    &__container{
+        max-width: 1035px;
+        padding: 0 20px;
+        margin: 0 auto;
+    }
+    &__title {
+        margin-bottom: 75px;
+        text-align: center;
+        @media (max-width: 767px) {
+            margin-bottom: 40px;
+        }
+    }
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        @media (max-width:940px) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+    &__contacts {
+        // margin-right: 145px;
+    }
+    &__box {
+        display: flex;
+        margin-bottom: 38px;
+        align-items: center;
+        @media (max-width:576px) {
+            flex-direction: column;
+        }
+    }
+    &__ico {
+        margin-right: 25px;
+        width: 60px;
+        height: 60px;
+        @media (max-width:576px) {
+            margin: 0 0 20px 0;
+        }
+    }
+    &__info {
+        font-size: 40px;
+        line-height: 49 / 40 * 100%;
+        color: #000;
+        @extend %myriadpro-regular;
+        @media (min-width:1200px){
+            font-size: 25px;
+        }
+        @media (max-width:576px) {
+            font-size: 20px;
+        }
+        span{
+            border-bottom: 1px solid #62cc82;
+        }
+    }
+    &__addresses {
+        @media (max-width:940px) {
+            text-align: center;
+        }
+        &-item {
+            @extend %myriadpro-regular;
+            font-size: 17px;
+            line-height: 21 /17 * 100%;
+            color: #000;
+            margin-bottom: 25px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+            span {
+                display: block;
+                text-transform: uppercase;
             }
         }
     }
